# swagger-to-mcp

./: .coverage  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/openapi_to_mcp/: __init__.py  auth.py  cli.py  generator.py  server.py
src/swagger_to_mcp/: parser.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_auth_flows.py  test_cli.py  test_server.py
tests/unit/: test_auth.py  test_generator.py  test_parser.py
